# forgen

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  run.sh  validate_replacements.js
api/: Cargo.toml
api/src/: context.rs  lib.rs  manifest.rs  plugin.rs  query.rs  replacement.rs  runtime.rs  tree.rs
api/src/syntax/: ast.rs  kind.rs  mod.rs  raw.rs
cli/: Cargo.toml
cli/src/: loader.rs  main.rs  models.rs  oracle.rs  plugin.rs  replacements.rs  workspace.rs
cli/src/analysis/: extensions.rs  mod.rs
cli/src/plugins/: f64_logger.rs  mod.rs
example-plugin/: Cargo.toml
example-plugin/src/: lib.rs
macro/: Cargo.toml
macro/src/: lib.rs
src/: main.rs
src/analysis/: extractors.rs  hir_ext.rs  mod.rs
test/: Cargo.toml  run.bash  run.ps1
test-plugins/: Cargo.toml
test-plugins/src/: lib.rs
test-plugins/src/plugins/: example.rs  f64_logger.rs  mod.rs  seeded_binding.rs
test/src/: lib.rs  main.rs
