[package]
name = "cargo-forgen"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cargo-forgen"
path = "src/main.rs"

[dependencies]
# Rust Analyzer crates for type information
ra_ap_hir = "0.0.247"
ra_ap_hir_def = "0.0.247"
ra_ap_hir_ty = "0.0.247"
ra_ap_ide = "0.0.247"
ra_ap_ide_db = "0.0.247"
ra_ap_project_model = "0.0.247"
ra_ap_vfs = "0.0.247"
ra_ap_base_db = "0.0.247"
ra_ap_paths = "0.0.247"
ra_ap_load-cargo = "0.0.247"
ra_ap_syntax = "0.0.247"

# Utilities
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
notify = "6.1"
notify-debouncer-mini = "0.4"
