[package]
name = "forgen-api"
version = "0.3.0"
edition = "2021"
description = "Stable plugin API for the Forgen code-generation tool. Plugins only need this crate — no rust-analyzer dependencies required."

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
